--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
       href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://browser.sentry-cdn.com/5.9.1/bundle.min.js"
+      integrity="sha384-/x1aHz0nKRd6zVUazsV6CbQvjJvr6zQL2CHbQZf3yoLkezyEtZUpqUNnOLW9Nt3v"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
